# mantid-exercises

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  results.txt
ex1/: CMakeLists.txt
ex1/include/mantid-exercises/ex1/: CountWordFrequency.h  DiscardWhile.h  PairRangeToOrderedVector.h  StripPunctuation.h  TakeWhile.h
ex1/src/: CountWordFrequency.cpp  StripPunctuation.cpp  main.cpp
ex1/test/: CountWordFrequencyTest.cpp  DiscardWhitespaceTest.cpp  PairRangeToOrderedVectorTest.cpp  StripPunctuationTest.cpp
ex2/: CMakeLists.txt
ex2/include/mantid-exercises/ex2/: Circle.h  Rectangle.h  Shape.h  ShapeSorter.h  Square.h  Triangle.h
ex2/src/: Circle.cpp  Rectangle.cpp  Shape.cpp  ShapeSorter.cpp  Square.cpp  Triangle.cpp  main.cpp
ex2/test/: CircleTest.cpp  RectangleTest.cpp  SquareTest.cpp  TriangleTest.cpp
scripts/: build.sh  clean.sh  format.sh  new_module.sh  test.sh
